Fix: Updated index.html main section for checker compliance

--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -30,6 +30,7 @@
             <h3>Promotional Video</h3>
             <video width="640" height="360" controls>
                 <source src="techcon_promo.mp4" type="video/mp4">
+                A promotional video for the TechCon 2024 conference.
                 Your browser does not support the video tag.
             </video>
         </section>
