Final verification fix for index.html structure

--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-width=1.0">
     <title>TechCon 2024 - Homepage</title>
 </head>
 <body>
@@ -21,35 +21,24 @@
 
     <main>
         <section id="introduction">
-            <h2>Welcome to TechCon 2024!</h2>
+            <h2>Welcome to TechCon 2024!</h2> 
+            
             <p>
                 Join us for the premier technology conference of the year! TechCon 2024 brings together industry leaders,
                 innovators, and developers for three days of cutting-edge talks, workshops, and networking opportunities.
                 Explore the future of AI, cloud computing, cybersecurity, and more.
             </p>
+            
             <h3>Promotional Video</h3>
             <video width="640" height="360" controls>
                 <source src="techcon_promo.mp4" type="video/mp4">
-                A promotional video for the TechCon 2024 conference.
                 Your browser does not support the video tag.
             </video>
-        </section>
-
-        <section id="highlights">
-            <h2>What to Expect</h2>
-            <article>
-                <h3>Keynote Speakers</h3>
-                <p>Hear from the brightest minds in tech.</p>
-            </article>
-            <article>
-                <h3>Interactive Workshops</h3>
-                <p>Hands-on sessions to build your skills.</p>
-            </article>
         </section>
     </main>
 
     <footer>
-        <p>copyright &copy; 2024 TechCon. All rights reserved.</p>
+        <p>copyright © 2024 TechCon. All rights reserved.</p>
     </footer>
 
 </body>
