--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-width=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechCon 2024 - Homepage</title>
 </head>
 <body>
@@ -20,18 +20,15 @@
     </header>
 
     <main>
-        <section id="introduction">
-            <h2>Welcome to TechCon 2024!</h2> 
-            
+        <section>
             <p>
-                Join us for the premier technology conference of the year! TechCon 2024 brings together industry leaders,
-                innovators, and developers for three days of cutting-edge talks, workshops, and networking opportunities.
-                Explore the future of AI, cloud computing, cybersecurity, and more.
+                Join us for TechCon 2024, a premier gathering of innovators, developers, and industry 
+                leaders exploring advancements in AI, cloud computing, cybersecurity, and more.
             </p>
-            
-            <h3>Promotional Video</h3>
-            <video width="640" height="360" controls>
-                <source src="techcon_promo.mp4" type="video/mp4">
+
+            <video controls width="640" height="360">
+                <source src="promo.mp4" type="video/mp4">
+                <track src="subtitles.vtt" kind="subtitles" srclang="en" label="English Subtitles">
                 Your browser does not support the video tag.
             </video>
         </section>
