Added video fix error in about.html task

--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -24,38 +24,39 @@
             <h2>Our History</h2>
             <p>
                 TechCon began in 2010 as a small gathering of local developers and has grown into a major international event,
-                dedicated to fostering collaboration and innovation across all technological disciplines. We are proud to be a
-                platform for groundbreaking ideas.
+                dedicated to fostering collaboration and innovation across all technological disciplines.
             </p>
-            <img src="images/history_photo.jpg" alt="A historical photo showing the first small TechCon conference in 2010" width="300">
+            <img src="images/history_photo.jpg" alt="TechCon early event" width="300">
         </article>
 
         <article id="mission">
             <h2>Our Mission</h2>
             <p>
-                Our mission is to bridge the gap between emerging technology research and practical industry application. We aim
-                to empower attendees with the knowledge and connections needed to shape the future of technology.
+                Our mission is to bridge the gap between emerging technology research and practical industry application. 
             </p>
-            <img src="images/mission_icon.png" alt="Icon representing a mission or goal, such as a target or flag" width="100">
+            <img src="images/mission_icon.png" alt="Mission icon" width="100">
         </article>
 
         <article id="speakers">
             <h2>Notable Past Speakers</h2>
+
             <section>
                 <h3>Dr. Anya Sharma (AI Pioneer)</h3>
-                <img src="images/anya_sharma.jpg" alt="Photo of Dr. Anya Sharma" width="150">
-                <p>Dr. Sharma pioneered several key algorithms in ethical AI, pushing for responsible development in machine learning.</p>
+                <img src="images/anya_sharma.jpg" alt="Dr. Anya Sharma" width="150">
+                <p>Dr. Sharma pioneered several key algorithms in ethical AI.</p>
             </section>
+
             <section>
                 <h3>Mr. Ben Carter (Cloud Architect)</h3>
-                <img src="images/ben_carter.jpg" alt="Photo of Mr. Ben Carter" width="150">
-                <p>Ben led the migration of a major banking platform to a fully cloud-native infrastructure, setting industry standards for security and scale.</p>
+                <img src="images/ben_carter.jpg" alt="Ben Carter" width="150">
+                <p>Ben led the migration of a major banking platform to a cloud-native infrastructure.</p>
             </section>
+
         </article>
     </main>
 
     <footer>
-        <p>copyright &copy; 2024 TechCon. All rights reserved.</p>
+        <p>copyright © 2024 TechCon. All rights reserved.</p>
     </footer>
 
 </body>
