Added video fix error in about.html task

--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -3,60 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechCon 2024 - About</title>
+    <title>About TechCon 2024</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
 
+<body>
+    <!-- HEADER SECTION -->
     <header>
         <h1>About TechCon 2024</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="register.html">Register</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
+    <!-- MAIN CONTENT SECTION -->
     <main>
+        <!-- History Section -->
         <article id="history">
             <h2>Our History</h2>
             <p>
-                TechCon began in 2010 as a small gathering of local developers and has grown into a major international event,
-                dedicated to fostering collaboration and innovation across all technological disciplines.
+                TechCon began as a small meetup of innovators committed to exploring emerging technologies.
+                Since its early years, it has grown into a global conference attracting thousands of 
+                enthusiasts, engineers, developers, and industry leaders.
             </p>
-            <img src="images/history_photo.jpg" alt="TechCon early event" width="300">
+            <p>
+                Over time, TechCon has evolved into a platform where groundbreaking tech solutions, 
+                research findings, and futuristic ideas are shared openly for the advancement of the industry.
+            </p>
+
+            <img src="images/history1.jpg" alt="Early TechCon conference event">
+            <img src="images/history2.jpg" alt="First group of TechCon attendees in discussion">
         </article>
 
+        <!-- Mission Section -->
         <article id="mission">
             <h2>Our Mission</h2>
             <p>
-                Our mission is to bridge the gap between emerging technology research and practical industry application. 
+                The mission of TechCon is to empower innovation, encourage creativity, and
+                connect brilliant minds working to shape the technology of tomorrow.
             </p>
-            <img src="images/mission_icon.png" alt="Mission icon" width="100">
+            <p>
+                We aim to bring together experts, students, creators, and industry professionals
+                to foster meaningful collaboration and inspire groundbreaking solutions.
+            </p>
+
+            <img src="images/mission.jpg" alt="TechCon mission representation image">
         </article>
 
+        <!-- Past Speakers Section -->
         <article id="speakers">
-            <h2>Notable Past Speakers</h2>
+            <h2>Past Speakers</h2>
+            <p>Below are some of the remarkable individuals who have spoken at TechCon over the years:</p>
 
-            <section>
-                <h3>Dr. Anya Sharma (AI Pioneer)</h3>
-                <img src="images/anya_sharma.jpg" alt="Dr. Anya Sharma" width="150">
-                <p>Dr. Sharma pioneered several key algorithms in ethical AI.</p>
-            </section>
+            <div class="speaker">
+                <img src="images/speaker1.jpg" alt="Photo of past speaker Dr. Ada Sterling">
+                <p>
+                    <strong>Dr. Ada Sterling</strong> — A pioneer in Artificial Intelligence 
+                    known for her groundbreaking research in machine learning and ethical AI development.
+                </p>
+            </div>
 
-            <section>
-                <h3>Mr. Ben Carter (Cloud Architect)</h3>
-                <img src="images/ben_carter.jpg" alt="Ben Carter" width="150">
-                <p>Ben led the migration of a major banking platform to a cloud-native infrastructure.</p>
-            </section>
+            <div class="speaker">
+                <img src="images/speaker2.jpg" alt="Photo of past speaker John T. Maxwell">
+                <p>
+                    <strong>John T. Maxwell</strong> — A cybersecurity expert celebrated for his 
+                    contributions to advanced encryption and ethical hacking.
+                </p>
+            </div>
 
+            <div class="speaker">
+                <img src="images/speaker3.jpg" alt="Photo of past speaker Lisa Cheng">
+                <p>
+                    <strong>Lisa Cheng</strong> — Software engineer and open-source advocate recognized 
+                    for her work in building inclusive developer communities.
+                </p>
+            </div>
         </article>
     </main>
 
+    <!-- FOOTER SECTION -->
     <footer>
-        <p>copyright © 2024 TechCon. All rights reserved.</p>
+        <p>&copy; 2024 TechCon. All rights reserved.</p>
     </footer>
 
 </body>
